crates/pg_syntax/tests/snapshots/postgres_regress/case@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT i AS \"Value\",\n  CASE WHEN (i < 0) THEN 'small'\n       WHEN (i = 0) THEN 'zero'\n       WHEN (i = 1) THEN 'one'\n       WHEN (i = 2) THEN 'two'\n       ELSE 'big'\n  END AS \"Category\"\n  FROM CASE_TBL;"
---
SelectStmt@0..202
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    ColumnRef@7..8
      Ident@7..8 "i"
    Whitespace@8..9 " "
    As@9..11 "AS"
    Whitespace@11..12 " "
    Ident@12..19 "\"Value\""
  Ascii44@19..20 ","
  Newline@20..21 "\n"
  Whitespace@21..23 "  "
  ResTarget@23..185
    CaseExpr@23..171
      Case@23..27 "CASE"
      Whitespace@27..28 " "
      CaseWhen@28..53
        When@28..32 "WHEN"
        Whitespace@32..33 " "
        Ascii40@33..34 "("
        AExpr@34..39
          ColumnRef@34..35
            Ident@34..35 "i"
          Whitespace@35..36 " "
          Ascii60@36..37 "<"
          Whitespace@37..38 " "
          AConst@38..39
            Iconst@38..39 "0"
        Ascii41@39..40 ")"
        Whitespace@40..41 " "
        Then@41..45 "THEN"
        Whitespace@45..46 " "
        AConst@46..53
          Sconst@46..53 "'small'"
      Newline@53..54 "\n"
      Whitespace@54..61 "       "
      CaseWhen@61..85
        When@61..65 "WHEN"
        Whitespace@65..66 " "
        Ascii40@66..67 "("
        AExpr@67..72
          ColumnRef@67..68
            Ident@67..68 "i"
          Whitespace@68..69 " "
          Ascii61@69..70 "="
          Whitespace@70..71 " "
          AConst@71..72
            Iconst@71..72 "0"
        Ascii41@72..73 ")"
        Whitespace@73..74 " "
        Then@74..78 "THEN"
        Whitespace@78..79 " "
        AConst@79..85
          Sconst@79..85 "'zero'"
      Newline@85..86 "\n"
      Whitespace@86..93 "       "
      CaseWhen@93..116
        When@93..97 "WHEN"
        Whitespace@97..98 " "
        Ascii40@98..99 "("
        AExpr@99..104
          ColumnRef@99..100
            Ident@99..100 "i"
          Whitespace@100..101 " "
          Ascii61@101..102 "="
          Whitespace@102..103 " "
          AConst@103..104
            Iconst@103..104 "1"
        Ascii41@104..105 ")"
        Whitespace@105..106 " "
        Then@106..110 "THEN"
        Whitespace@110..111 " "
        AConst@111..116
          Sconst@111..116 "'one'"
      Newline@116..117 "\n"
      Whitespace@117..124 "       "
      CaseWhen@124..147
        When@124..128 "WHEN"
        Whitespace@128..129 " "
        Ascii40@129..130 "("
        AExpr@130..135
          ColumnRef@130..131
            Ident@130..131 "i"
          Whitespace@131..132 " "
          Ascii61@132..133 "="
          Whitespace@133..134 " "
          AConst@134..135
            Iconst@134..135 "2"
        Ascii41@135..136 ")"
        Whitespace@136..137 " "
        Then@137..141 "THEN"
        Whitespace@141..142 " "
        AConst@142..147
          Sconst@142..147 "'two'"
      Newline@147..148 "\n"
      Whitespace@148..155 "       "
      Else@155..159 "ELSE"
      Whitespace@159..160 " "
      AConst@160..165
        Sconst@160..165 "'big'"
      Newline@165..166 "\n"
      Whitespace@166..168 "  "
      EndP@168..171 "END"
    Whitespace@171..172 " "
    As@172..174 "AS"
    Whitespace@174..175 " "
    Ident@175..185 "\"Category\""
  Newline@185..186 "\n"
  Whitespace@186..188 "  "
  From@188..192 "FROM"
  Whitespace@192..193 " "
  RangeVar@193..201
    Ident@193..201 "CASE_TBL"
  Ascii59@201..202 ";"

