crates/pg_syntax/tests/snapshots/postgres_regress/case@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT\n  CASE WHEN ((i < 0) or (i < 0)) THEN 'small'\n       WHEN ((i = 0) or (i = 0)) THEN 'zero'\n       WHEN ((i = 1) or (i = 1)) THEN 'one'\n       WHEN ((i = 2) or (i = 2)) THEN 'two'\n       ELSE 'big'\n  END AS \"Category\"\n  FROM CASE_TBL;"
---
SelectStmt@0..240
  Select@0..6 "SELECT"
  Newline@6..7 "\n"
  Whitespace@7..9 "  "
  ResTarget@9..223
    CaseExpr@9..209
      Case@9..13 "CASE"
      Whitespace@13..14 " "
      CaseWhen@14..52
        When@14..18 "WHEN"
        Whitespace@18..19 " "
        Ascii40@19..20 "("
        Ascii40@20..21 "("
        BoolExpr@21..37
          AExpr@21..26
            ColumnRef@21..22
              Ident@21..22 "i"
            Whitespace@22..23 " "
            Ascii60@23..24 "<"
            Whitespace@24..25 " "
            AConst@25..26
              Iconst@25..26 "0"
          Ascii41@26..27 ")"
          Whitespace@27..28 " "
          Or@28..30 "or"
          Whitespace@30..31 " "
          Ascii40@31..32 "("
          AExpr@32..37
            ColumnRef@32..33
              Ident@32..33 "i"
            Whitespace@33..34 " "
            Ascii60@34..35 "<"
            Whitespace@35..36 " "
            AConst@36..37
              Iconst@36..37 "0"
        Ascii41@37..38 ")"
        Ascii41@38..39 ")"
        Whitespace@39..40 " "
        Then@40..44 "THEN"
        Whitespace@44..45 " "
        AConst@45..52
          Sconst@45..52 "'small'"
      Newline@52..53 "\n"
      Whitespace@53..60 "       "
      CaseWhen@60..97
        When@60..64 "WHEN"
        Whitespace@64..65 " "
        Ascii40@65..66 "("
        Ascii40@66..67 "("
        BoolExpr@67..83
          AExpr@67..72
            ColumnRef@67..68
              Ident@67..68 "i"
            Whitespace@68..69 " "
            Ascii61@69..70 "="
            Whitespace@70..71 " "
            AConst@71..72
              Iconst@71..72 "0"
          Ascii41@72..73 ")"
          Whitespace@73..74 " "
          Or@74..76 "or"
          Whitespace@76..77 " "
          Ascii40@77..78 "("
          AExpr@78..83
            ColumnRef@78..79
              Ident@78..79 "i"
            Whitespace@79..80 " "
            Ascii61@80..81 "="
            Whitespace@81..82 " "
            AConst@82..83
              Iconst@82..83 "0"
        Ascii41@83..84 ")"
        Ascii41@84..85 ")"
        Whitespace@85..86 " "
        Then@86..90 "THEN"
        Whitespace@90..91 " "
        AConst@91..97
          Sconst@91..97 "'zero'"
      Newline@97..98 "\n"
      Whitespace@98..105 "       "
      CaseWhen@105..141
        When@105..109 "WHEN"
        Whitespace@109..110 " "
        Ascii40@110..111 "("
        Ascii40@111..112 "("
        BoolExpr@112..128
          AExpr@112..117
            ColumnRef@112..113
              Ident@112..113 "i"
            Whitespace@113..114 " "
            Ascii61@114..115 "="
            Whitespace@115..116 " "
            AConst@116..117
              Iconst@116..117 "1"
          Ascii41@117..118 ")"
          Whitespace@118..119 " "
          Or@119..121 "or"
          Whitespace@121..122 " "
          Ascii40@122..123 "("
          AExpr@123..128
            ColumnRef@123..124
              Ident@123..124 "i"
            Whitespace@124..125 " "
            Ascii61@125..126 "="
            Whitespace@126..127 " "
            AConst@127..128
              Iconst@127..128 "1"
        Ascii41@128..129 ")"
        Ascii41@129..130 ")"
        Whitespace@130..131 " "
        Then@131..135 "THEN"
        Whitespace@135..136 " "
        AConst@136..141
          Sconst@136..141 "'one'"
      Newline@141..142 "\n"
      Whitespace@142..149 "       "
      CaseWhen@149..185
        When@149..153 "WHEN"
        Whitespace@153..154 " "
        Ascii40@154..155 "("
        Ascii40@155..156 "("
        BoolExpr@156..172
          AExpr@156..161
            ColumnRef@156..157
              Ident@156..157 "i"
            Whitespace@157..158 " "
            Ascii61@158..159 "="
            Whitespace@159..160 " "
            AConst@160..161
              Iconst@160..161 "2"
          Ascii41@161..162 ")"
          Whitespace@162..163 " "
          Or@163..165 "or"
          Whitespace@165..166 " "
          Ascii40@166..167 "("
          AExpr@167..172
            ColumnRef@167..168
              Ident@167..168 "i"
            Whitespace@168..169 " "
            Ascii61@169..170 "="
            Whitespace@170..171 " "
            AConst@171..172
              Iconst@171..172 "2"
        Ascii41@172..173 ")"
        Ascii41@173..174 ")"
        Whitespace@174..175 " "
        Then@175..179 "THEN"
        Whitespace@179..180 " "
        AConst@180..185
          Sconst@180..185 "'two'"
      Newline@185..186 "\n"
      Whitespace@186..193 "       "
      Else@193..197 "ELSE"
      Whitespace@197..198 " "
      AConst@198..203
        Sconst@198..203 "'big'"
      Newline@203..204 "\n"
      Whitespace@204..206 "  "
      EndP@206..209 "END"
    Whitespace@209..210 " "
    As@210..212 "AS"
    Whitespace@212..213 " "
    Ident@213..223 "\"Category\""
  Newline@223..224 "\n"
  Whitespace@224..226 "  "
  From@226..230 "FROM"
  Whitespace@230..231 " "
  RangeVar@231..239
    Ident@231..239 "CASE_TBL"
  Ascii59@239..240 ";"

