crates/pg_syntax/tests/snapshots/postgres_regress/case@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT *\n  FROM CASE_TBL a, CASE2_TBL b\n  WHERE COALESCE(a.f, b.i, b.j) = 2;"
---
SelectStmt@0..76
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Newline@8..9 "\n"
  Whitespace@9..11 "  "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeVar@16..26
    Ident@16..24 "CASE_TBL"
    Whitespace@24..25 " "
    Alias@25..26
      Ident@25..26 "a"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  RangeVar@28..39
    Ident@28..37 "CASE2_TBL"
    Whitespace@37..38 " "
    Alias@38..39
      Ident@38..39 "b"
  Newline@39..40 "\n"
  Whitespace@40..42 "  "
  Where@42..47 "WHERE"
  Whitespace@47..48 " "
  AExpr@48..75
    CoalesceExpr@48..70
      Coalesce@48..56 "COALESCE"
      Ascii40@56..57 "("
      ColumnRef@57..60
        Ident@57..58 "a"
        Ascii46@58..59 "."
        Ident@59..60 "f"
      Ascii44@60..61 ","
      Whitespace@61..62 " "
      ColumnRef@62..65
        Ident@62..63 "b"
        Ascii46@63..64 "."
        Ident@64..65 "i"
      Ascii44@65..66 ","
      Whitespace@66..67 " "
      ColumnRef@67..70
        Ident@67..68 "b"
        Ascii46@68..69 "."
        Ident@69..70 "j"
    Ascii41@70..71 ")"
    Whitespace@71..72 " "
    Ascii61@72..73 "="
    Whitespace@73..74 " "
    AConst@74..75
      Iconst@74..75 "2"
  Ascii59@75..76 ";"

