crates/pg_syntax/tests/snapshots/postgres_regress/case@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT *\n  FROM CASE_TBL a, CASE2_TBL b\n  WHERE COALESCE(f,b.i) = 2;"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Newline@8..9 "\n"
  Whitespace@9..11 "  "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeVar@16..26
    Ident@16..24 "CASE_TBL"
    Whitespace@24..25 " "
    Alias@25..26
      Ident@25..26 "a"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  RangeVar@28..39
    Ident@28..37 "CASE2_TBL"
    Whitespace@37..38 " "
    Alias@38..39
      Ident@38..39 "b"
  Newline@39..40 "\n"
  Whitespace@40..42 "  "
  Where@42..47 "WHERE"
  Whitespace@47..48 " "
  AExpr@48..67
    CoalesceExpr@48..62
      Coalesce@48..56 "COALESCE"
      Ascii40@56..57 "("
      ColumnRef@57..58
        Ident@57..58 "f"
      Ascii44@58..59 ","
      ColumnRef@59..62
        Ident@59..60 "b"
        Ascii46@60..61 "."
        Ident@61..62 "i"
    Ascii41@62..63 ")"
    Whitespace@63..64 " "
    Ascii61@64..65 "="
    Whitespace@65..66 " "
    AConst@66..67
      Iconst@66..67 "2"
  Ascii59@67..68 ";"

