crates/pg_syntax/tests/snapshots/postgres_regress/case@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO CASE_TBL VALUES (2, 20.2);"
---
InsertStmt@0..38
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "CASE_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..36
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..36
      AConst@29..30
        Iconst@29..30 "2"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..36
        Fconst@32..36 "20.2"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

