crates/pg_syntax/tests/snapshots/postgres_regress/case@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION vol(text) returns text as\n  'begin return $1; end' language plpgsql volatile;"
---
CreateFunctionStmt@0..93
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..19 "vol"
  Ascii40@19..20 "("
  FunctionParameter@20..24
    TypeName@20..24
      TextP@20..24 "text"
  Ascii41@24..25 ")"
  Whitespace@25..26 " "
  Returns@26..33 "returns"
  Whitespace@33..34 " "
  TypeName@34..38
    TextP@34..38 "text"
  Whitespace@38..39 " "
  DefElem@39..66
    As@39..41 "as"
    Newline@41..42 "\n"
    Whitespace@42..44 "  "
    List@44..66
      Sconst@44..66 "'begin return $1; end'"
  Whitespace@66..67 " "
  DefElem@67..83
    Language@67..75 "language"
    Whitespace@75..76 " "
    Ident@76..83 "plpgsql"
  Whitespace@83..84 " "
  DefElem@84..92
    Volatile@84..92 "volatile"
  Ascii59@92..93 ";"

