crates/pg_syntax/tests/snapshots/postgres_regress/case@44.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT CASE\n  (CASE vol('bar')\n    WHEN 'foo' THEN 'it was foo!'\n    WHEN vol(null) THEN 'null input'\n    WHEN 'bar' THEN 'it was bar!' END\n  )\n  WHEN 'it was foo!' THEN 'foo recognized'\n  WHEN 'it was bar!' THEN 'bar recognized'\n  ELSE 'unrecognized' END;"
---
SelectStmt@0..256
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..255
    CaseExpr@7..255
      Case@7..11 "CASE"
      Newline@11..12 "\n"
      Whitespace@12..14 "  "
      Ascii40@14..15 "("
      CaseExpr@15..139
        Case@15..19 "CASE"
        Whitespace@19..20 " "
        FuncCall@20..29
          Ident@20..23 "vol"
          Ascii40@23..24 "("
          AConst@24..29
            Sconst@24..29 "'bar'"
        Ascii41@29..30 ")"
        Newline@30..31 "\n"
        Whitespace@31..35 "    "
        CaseWhen@35..64
          When@35..39 "WHEN"
          Whitespace@39..40 " "
          AConst@40..45
            Sconst@40..45 "'foo'"
          Whitespace@45..46 " "
          Then@46..50 "THEN"
          Whitespace@50..51 " "
          AConst@51..64
            Sconst@51..64 "'it was foo!'"
        Newline@64..65 "\n"
        Whitespace@65..69 "    "
        CaseWhen@69..101
          When@69..73 "WHEN"
          Whitespace@73..74 " "
          FuncCall@74..82
            Ident@74..77 "vol"
            Ascii40@77..78 "("
            AConst@78..82
              NullP@78..82 "null"
          Ascii41@82..83 ")"
          Whitespace@83..84 " "
          Then@84..88 "THEN"
          Whitespace@88..89 " "
          AConst@89..101
            Sconst@89..101 "'null input'"
        Newline@101..102 "\n"
        Whitespace@102..106 "    "
        CaseWhen@106..135
          When@106..110 "WHEN"
          Whitespace@110..111 " "
          AConst@111..116
            Sconst@111..116 "'bar'"
          Whitespace@116..117 " "
          Then@117..121 "THEN"
          Whitespace@121..122 " "
          AConst@122..135
            Sconst@122..135 "'it was bar!'"
        Whitespace@135..136 " "
        EndP@136..139 "END"
      Newline@139..140 "\n"
      Whitespace@140..142 "  "
      Ascii41@142..143 ")"
      Newline@143..144 "\n"
      Whitespace@144..146 "  "
      CaseWhen@146..186
        When@146..150 "WHEN"
        Whitespace@150..151 " "
        AConst@151..164
          Sconst@151..164 "'it was foo!'"
        Whitespace@164..165 " "
        Then@165..169 "THEN"
        Whitespace@169..170 " "
        AConst@170..186
          Sconst@170..186 "'foo recognized'"
      Newline@186..187 "\n"
      Whitespace@187..189 "  "
      CaseWhen@189..229
        When@189..193 "WHEN"
        Whitespace@193..194 " "
        AConst@194..207
          Sconst@194..207 "'it was bar!'"
        Whitespace@207..208 " "
        Then@208..212 "THEN"
        Whitespace@212..213 " "
        AConst@213..229
          Sconst@213..229 "'bar recognized'"
      Newline@229..230 "\n"
      Whitespace@230..232 "  "
      Else@232..236 "ELSE"
      Whitespace@236..237 " "
      AConst@237..251
        Sconst@237..251 "'unrecognized'"
      Whitespace@251..252 " "
      EndP@252..255 "END"
  Ascii59@255..256 ";"

